Generate ForgeIT features facade via codegen